chap0, get & inspect data

--- a/references.bib
+++ b/references.bib
@@ -29,3 +29,150 @@
 	address = {Cambridge, Massachusetts},
 	langid = {Englisch}
 }
+
+@book{piketty2020a,
+	title = {Capital and Ideology},
+	author = {Piketty, Thomas},
+	year = {2020},
+	month = {03},
+	date = {2020-03-10},
+	publisher = {Harvard University Press},
+	edition = {Illustrated Edition},
+	note = {Citation Key: piketty2020a},
+	address = {Cambridge, Massachusetts ; London, England},
+	langid = {Englisch}
+}
+
+@book{piketty2017,
+	title = {Capital in the Twenty-First Century},
+	author = {Piketty, Thomas and Goldhammer, Arthur},
+	year = {2017},
+	month = {09},
+	date = {2017-09-30},
+	publisher = {Harvard University Press},
+	note = {Citation Key: piketty2017},
+	langid = {Englisch}
+}
+
+@book{piketty2022,
+	title = {A Brief History of Equality},
+	author = {Piketty, Thomas},
+	year = {2022},
+	month = {04},
+	date = {2022-04-19},
+	publisher = {Harvard University Press},
+	note = {Citation Key: piketty2022},
+	address = {Cambridge, Massachusetts},
+	langid = {Englisch}
+}
+
+@book{alvaredo2018,
+	title = {The World Inequality Report 2018},
+	author = {Alvaredo, Facundo and Chancel, Lucas and Piketty, Thomas and Saez, Emmanuel and Zucman, Gabriel},
+	year = {2018},
+	month = {06},
+	date = {2018-06-11},
+	publisher = {Harvard University Press},
+	note = {Citation Key: alvaredo2018},
+	address = {Cambridge, Massachusetts London},
+	langid = {English}
+}
+
+@book{chancel2022,
+	title = {World Inequality Report 2022},
+	author = {Chancel, Lucas and Piketty, Thomas and Saez, Emmanuel and Zucman, Gabriel and Duflo, Esther},
+	year = {2022},
+	month = {11},
+	date = {2022-11-01},
+	publisher = {Harvard University Press},
+	note = {Citation Key: chancel2022},
+	address = {Cambridge, Massachusetts London, England},
+	langid = {English}
+}
+
+@book{gethin2021,
+	title = {Political Cleavages and Social Inequalities - A Study of Fifty Democracies, 1948-2020: A Study of Fifty Democracies, 1948{\textendash}2020},
+	author = {Gethin, Amory and {Martínez-Toleda}, Clara and Piketty, Thomas},
+	year = {2021},
+	month = {12},
+	date = {2021-12-14},
+	publisher = {Harvard University Press},
+	note = {Citation Key: gethin2021},
+	address = {Cambridge, Massachusetts London, England},
+	langid = {English}
+}
+
+@misc{gethin2024,
+	title = {WPID - World Political Cleavages and Inequality Database},
+	author = {Gethin, Amory and Martinez-Toledo, Clara and Piketty, Thomas},
+	year = {2024},
+	date = {2024},
+	url = {https://wpid.world/},
+	note = {Citation Key: gethin2024}
+}
+
+@misc{worldinequalitylab2024,
+	title = {WID - World Inequality Database},
+	author = {{Author Collective 'World Inequality Lab'}, },
+	year = {2024},
+	date = {2024},
+	url = {https://wid.world/},
+	note = {Citation Key: worldinequalitylab2024},
+	langid = {canadian}
+}
+
+@article{worldinequalitylab2024a,
+	title = {Distributional National Accounts Guidelines},
+	author = {World Inequality Lab, },
+	year = {2024},
+	month = {02},
+	date = {2024-02-27},
+	note = {Citation Key: worldinequalitylab2024a},
+	langid = {en}
+}
+
+@article{gpinter,
+	title = {Generalized Pareto Curves: Theory and Applications},
+	author = {Blanchet, Thomas and Fournier, Juliette and Piketty, Thomas},
+	year = {2017},
+	date = {2017},
+	url = {http://wid.world/document/blanchet-t-fournier-j-piketty-t-generalized-pareto-curves-theory-applications-2017/}
+}
+
+@article{wid,
+	title = {wid: Download Data from WID.world},
+	author = {Blanchet, Thomas},
+	year = {2024},
+	date = {2024},
+	url = {https://github.com/WIDworld/wid-r-tool}
+}
+
+@misc{worldinequalitylab2024b,
+	title = {Codes Dictionary},
+	author = {World Inequality Lab, },
+	year = {2024},
+	date = {2024},
+	url = {https://wid.world/codes-dictionary/},
+	note = {Citation Key: worldinequalitylab2024b},
+	langid = {canadian}
+}
+
+@misc{worldinequalitylab2024c,
+	title = {Summary table},
+	author = {World Inequality Lab, },
+	year = {2024},
+	date = {2024},
+	url = {https://wid.world/summary-table/},
+	note = {Citation Key: worldinequalitylab2024c},
+	langid = {canadian}
+}
+
+@misc{worldinequalitylab2024d,
+	title = {Generalized Pareto interpolation},
+	author = {World Inequality Lab, },
+	year = {2024},
+	date = {2024},
+	url = {https://wid.world/gpinter/},
+	note = {Citation Key: worldinequalitylab2024d},
+	langid = {canadian}
+}
