list countries used in WIR2022; reorganize files

--- a/references.bib
+++ b/references.bib
@@ -176,3 +176,90 @@
 	note = {Citation Key: worldinequalitylab2024d},
 	langid = {canadian}
 }
+
+@book{chancel2022,
+	title = {World Inequality Report 2022, World Inequality Lab},
+	author = {Chancel, Lucas and Piketty, Thomas and Saez, Emmanuel and Zucman, Gabriel and Duflo, Esther},
+	year = {2022},
+	month = {11},
+	date = {2022-11-01},
+	publisher = {Harvard University Press},
+	url = {https://wir2022.wid.world/},
+	note = {Citation Key: chancel2022},
+	address = {Cambridge, Massachusetts London, England},
+	langid = {English}
+}
+
+@book{piketty2022,
+	title = {A Brief History of Equality},
+	author = {Piketty, Thomas},
+	year = {2022},
+	month = {04},
+	date = {2022-04-19},
+	publisher = {Harvard University Press},
+	note = {Citation Key: piketty2022},
+	address = {Cambridge, Massachusetts},
+	langid = {Englisch}
+}
+
+@misc{worldinequalitylab2024,
+	title = {WID - World Inequality Database},
+	author = {{Author Collective 'World Inequality Lab'}, },
+	year = {2024},
+	date = {2024},
+	url = {https://wid.world/},
+	note = {Citation Key: worldinequalitylab2024},
+	langid = {canadian}
+}
+
+
+@article{globalchangedatalab2024,
+	title = {OWID Homepage},
+	author = {Global Change Data Lab,  and Roser, Max},
+	year = {2024},
+	month = {03},
+	date = {2024-03-25},
+	journal = {Our World in Data},
+	url = {https://ourworldindata.org},
+	note = {Citation Key: globalchangedatalab2024}
+}
+
+@misc{worldbank2024,
+	title = {Poverty and Inequality Platform (version: 20240326{\_}2017)},
+	author = {World Bank, },
+	year = {2024},
+	date = {2024-07-26},
+	url = {https://pip.worldbank.org/home},
+	note = {Citation Key: worldbank2024}
+}
+
+@misc{lisauthorcollective2024,
+	title = {LIS Cross-National Data Center in Luxembourg},
+	author = {LIS Author Collective, },
+	year = {2024},
+	month = {07},
+	date = {2024-07-26},
+	url = {https://www.lisdatacenter.org/},
+	note = {Citation Key: lisauthorcollective2024}
+}
+
+@misc{gethin2024,
+	title = {WPID - World Political Cleavages and Inequality Database},
+	author = {Gethin, Amory and Martinez-Toledono, Clara and Piketty, Thomas},
+	year = {2024},
+	date = {2024},
+	url = {https://wpid.world/},
+	note = {Citation Key: gethin2024}
+}
+
+@book{cage2023,
+	title = {Une histoire du conflit politique: Elections et inégalités sociales en France, 1789-2022},
+	author = {{Cagé}, Julia and Piketty, Thomas},
+	year = {2023},
+	month = {09},
+	date = {2023-09-08},
+	publisher = {SEUIL},
+	note = {Citation Key: cage{\_}2023},
+	address = {Paris XIXe},
+	langid = {Französisch}
+}
