list data-resources

--- a/references.bib
+++ b/references.bib
@@ -263,3 +263,70 @@
 	address = {Paris XIXe},
 	langid = {Französisch}
 }
+
+@book{cowell2011,
+	title = {Measuring Inequality},
+	author = {Cowell, Frank},
+	year = {2011},
+	month = {02},
+	date = {2011-02-04},
+	publisher = {Oxford University Press, U.S.A.},
+	edition = {3},
+	note = {Citation Key: cowell{\_}2011},
+	address = {Oxford},
+	langid = {Englisch}
+}
+
+@article{chancel2022d,
+	title = {Global carbon inequality over 1990{\textendash}2019},
+	author = {Chancel, Lucas},
+	year = {2022},
+	month = {11},
+	date = {2022-11},
+	journal = {Nature Sustainability},
+	pages = {931--938},
+	volume = {5},
+	number = {11},
+	doi = {10.1038/s41893-022-00955-z},
+	url = {https://www.nature.com/articles/s41893-022-00955-z},
+	note = {Citation Key: chancel2022d},
+	langid = {en}
+}
+
+@article{chancel2022c,
+	title = {Global carbon inequality over 1990{\textendash}2019},
+	author = {Chancel, Lucas},
+	year = {2022},
+	month = {11},
+	date = {2022-11},
+	journal = {Nature Sustainability},
+	pages = {931--938},
+	volume = {5},
+	number = {11},
+	doi = {10.1038/s41893-022-00955-z},
+	url = {https://www.nature.com/articles/s41893-022-00955-z},
+	note = {Citation Key: chancel2022c},
+	langid = {en}
+}
+
+@misc{chancel2022d,
+	title = {Global Carbon Inequality over 1990-2019},
+	author = {Chancel, Lucas},
+	year = {2022},
+	date = {2022},
+	url = {https://lucaschancel.com/global-carbon-inequality-1990-2019/},
+	note = {Citation Key: Chancel2022d},
+	langid = {french}
+}
+
+@book{saez2020,
+	title = {The Triumph of Injustice: How the Rich Dodge Taxes and How to Make Them Pay},
+	author = {Saez, Emmanuel and Zucman, Gabriel},
+	year = {2020},
+	month = {10},
+	date = {2020-10-20},
+	publisher = {W W NORTON & CO},
+	note = {Citation Key: saez2020},
+	address = {New York, NY},
+	langid = {Englisch}
+}
