--- a/01-data-resources.qmd
+++ b/01-data-resources.qmd
@@ -56,47 +56,73 @@ Generally I will prefer data already collected and cleaned by some trustful orga
 
 ### Methodology {.unnumbered}
 
-- **Distributional National Account (DINA) Guidelines**: `r glossary("DINA")` is a resource to understand the methodology behind the decomposition of `r glossary("National Accounts")` and the estimation of inequality series for income and wealth. It explains methods and concepts used in the World Inequality Database. The version I am using is from February 2024, has 186 pages, and can be [downloaded as PDF](https://wid.world/document/distributional-national-accounts-guidelines-2020-concepts-and-methods-used-in-the-world-inequality-database/).
+- **Distributional National Account (DINA) Guidelines**: The Distributional National Account Guidelines (`r glossary("DINA")`) is a resource to understand the methodology behind the decomposition of `r glossary("National Accounts")` and the estimation of inequality series for income and wealth. It explains methods and concepts used in the World Inequality Database. The version I am using is from February 2024, has 186 pages, and can be [downloaded as PDF](https://wid.world/document/distributional-national-accounts-guidelines-2020-concepts-and-methods-used-in-the-world-inequality-database/).
+- **Code Dictionary Page**: The [Code Dictionary Page](https://wid.world/codes-dictionary/) describes the general structure of the World Inequality Database (WID). It explains how information is organized within it, and how to retrieve and interpret it content. It has three sections:
+    - **Chapter 1** explains the different ways of accessing the database.
+    - **Chapter 2** explains the general structure of the variables.
+    - **Chapter 3 to 9** describe the different WID codes that exist in the database.
+- **Summary Table**: The [Summary Table](https://wid.world/summary-table/) summarizes all available WID.world data. It is an efficient starting point: One can use the search tool to look for specific countries, variables or WID.world codes, which you can then download for more detailed analysis.
+- **Downloading Data**: 
+    - **Download of specific series**: The [WID data page](https://wid.world/world/#sptinc_p90p100_z/US;FR;DE;CN;ZA;GB;WO/last/eu/k/p/yearly/s/false/24.722500000000004/80/curve/false/country) is designed for ease of use. Simply scroll through the left-hand menu to select the data you require, and download it in the format that best suits your needs. 
+    - **Bulk Download**: If you who want to request a large number of series at the same time, there is also a bulk download options. Wit the button at the bottom-left of the [data section](https://wid.world/data/) you can download the entire database at once. You can also download all of the data relative to a specific country on the country pages.
 
-- **
 
 
 ::::
 :::::
 
+::: {.callout-caution style="color: darkgoldenrod;"}
+###### Some tools are not maintained anymore
 
+[Thomas Blanchet](https://github.com/thomasblanchet) has developed with [gpinter](https://github.com/thomasblanchet/gpinter) (an R package for generalized Pareto interpolation), [wid-R-tool](https://github.com/thomasblanchet/wid-r-tool) (an R package to download data from the WID.world), and [wid-stata-tool](https://github.com/thomasblanchet/wid-stata-tool) (Stata commands to download data from the WID.world database) several tools for working with the WID. But he is not affiliated anymore with the WID and has recently (2024-08-24) withdrawn all support for these tools. 
 
-The WID is the main resource I am going to use. But there are additionally many projects with additional datasets. 
+For the R and STATA code he claims grave concerns regarding the validity and integrity of the data these packages accesses. In the case of `gpinter` he points out:
 
-What follows are lists of possible data resources. 
+> Experience has shown that the approach the package implements causes more problems than it solves, especially when used by people who do not understand the underlying methodology and treat it as a black box. Older approaches, such as the mean-split histogram (see e.g., Measuring Inequality, Appendix A7, p. 172 [@cowell2011]), provide nearly identical results at a fraction of the cost and complexity (and to the extent that the results diverge, it almost certainly indicates a problem with the raw data that should rather be addressed directly.)
+:::
 
-As an `r glossary("advanced organizer")` I will take "A Brief History of
-Equality" by Thomas Piketty [@piketty2022]. 
+### Other WIL projects
 
-My text and data evaluation tries to follow the material in the book by
-Thomas Piketty, mentioned above. But I will try to demonstrate his
-argumentation with data for Austria. Additionally I am planing to
-compare this data with other countries of my interest, especially
-Germany.
-
-Piketty refers for all the data to the [World Inequality
-Database](https://wid.world/). But recently I have noted, that there are
-other important data resources on inequality as well:
+The `r glossary("WID")` is the flagship project of the `r glossary("WIL")` and it is also the main resource I am going to use. The WIL is working on several important research projects, most of them have not only publication but also free and open accessible data sets. Many of these projects can supply data for my research and function as `r glossary("advanced organizer", "advanced organizers")` for me. I have to inspect their data sets and figure out what data to use for an effective learning approach.
 
 ::: my-resource
 ::: my-resource-header
-::: {#lem-inequality-data}
-: A short list of inequality data resources
+::: {#lem-inequality-projects}
+: WIL research projects with free available datasets
 :::
 :::
 
 ::: my-resource-container
--   **WID**: The [World Inequality
-    Database](https://wid.world/wid-world/) (WID) aims to provide open
-    and convenient access to the most extensive available database on
-    the historical evolution of the world distribution of income and
-    wealth, both within countries and between countries
-    [@worldinequalitylab2024].
+-   **WIPD**: The [World Political Cleavages and Inequality
+    Database](https://wpid.world/) (WPID) is the result of a collaborative research program involving about twenty researchers all around the world. The central aim is to provide open and convenient access to the most extensive available dataset on the structure of political cleavages and social inequalities in electoral democracies, located on the five continents, from the mid-20th century to the present. [@gethin2024].
+-   **WIR2022**: [The World Inequality Report
+    2022](https://wir2022.wid.world/methodology/) (WIR2022) is the benchmark account of recent and historical trends in inequality. The report builds on the pioneering [edition of 2018](https://wir2018.wid.world/) to provide policy makers and scholars everywhere up-to-date information about the history of inequality, gender inequality, environmental inequalities, and trends in international tax reform and redistribution.
+-   **Une histoire du conflit politique**: [The book](https://www.unehistoireduconflitpolitique.fr/) is about elections and social inequalities in France, 1789-2022 [@cage2023] and is written in French. Who votes for whom and why? How did the social structure of the electorates of the different political movements and currents evolve in France from 1789 to 2022? You have access to all the electoral and socio-economic data that were collected at the level of the 36,000 municipalities of France, from the digitized electoral minutes to the National Archives to the finalized and homogenized files on which the research was based.
+- [Inequality in Latin America](https://distribuciones.info/index.html). The article is written in Spanish and it is based on [More Unequal or Not as Rich? Revisiting the Latin American Exception](https://wid.world/document/more-unequal-or-not-as-rich-revisiting-the-latin-american-exception-world-inequality-lab-working-paper-2022-13/). The article examines income distribution in Latin America and challenges the commonly accepted belief that the region is an exception to global trends of growing inequality. To support his research the team built new datasets which covers 80% of the region's population and combines surveys harmonized, social security data, tax returns on national income and accounts during the period 2000-2020. 
+- [Global Taxation of Capital and Labor](https://globaltaxation.world/) studies how the globalization has affected the taxation of labor and capital incomes. To address this questions the authors built and analyzed a new, global database on effective macroeconomic tax rates in more than 150 countries since 1965, combining national accounts data with government revenue statistics, including from a wide variety of archival records.
+- [Realtime Inequality](https://realtimeinequality.org/) provides the first timely statistics on how economic growth is distributed across groups. When new growth numbers come out each quarter, we show how each income and wealth group benefits to conclude who benefits from income and wealth Growth in the United States.
+- [Carbon Inequality Data](https://wid.world/news-article/climate-change-the-global-inequality-of-carbon-emissions/) explores the inequality of carbon footprint across the global population. Lucas Chancel estimates the global inequality of individual greenhouse gas (GHG) emissions between 1990 and 2019 using a newly assembled dataset of income and wealth inequality, environmental input-output tables and a framework differentiating emissions from consumption and investments [@chancel2022c; @chancel2022d].
+- [Inequality Transparency Index](https://wid.world/transparency) reports about the extent of inequality data opacity per country. The index inequality transparency index ranges from 0 to 20 for each country. The index looks at four different data sources: income surveys, income tax data, wealth surveys and wealth tax data and different components for each of these sources: Quality, Frequency of Publication and Access to Data.It explains the calculation in a [Technical Note](https://wid.world/document/inequality-transparency-index-update-world-inequality-lab-technical-note-2020-12/) and provides [data for each country](https://wid.world/document/inequality-transparency-index-update-raw-data-2023/).
+- [Missing Profits](https://missingprofits.world/) investigates how much profits each country loses or attracts because of tax avoidance. There is an interactive map to explore which countries attract and lose profits. It provides main data, raw data, STATA programs, replication guides for tables and graphs and an update with 2016 data.
+- [Tax Justice Now](https://www.taxjusticenow.org/) is an essential companion to The Triumph of Injustice [@saez2020]. You can visualize how much each income group pays in taxes when we include all taxes (income taxes, corporate taxes, payroll taxes, consumption taxes, etc.) at all levels of government (federal, state, and local). Plus you can explore how changing existing taxes—such as increasing individual income tax rates—or creating new taxes—such as a progressive wealth tax or a value added tax—would affect tax revenue, tax progressivity, and inequality. There is a [Technical Appendix](https://www.taxjusticenow.org/appendix) with all the programs and data for replication.
+
+
+
+:::
+:::
+
+## Other data resources
+
+The WID will be my my starting point for exploring the inequality in Austria. But whenever sensible I will try to discover and use other resources as well. What follows is a list of possible data resources I have already found. 
+
+::: my-resource
+::: my-resource-header
+::: {#lem-inequality-data}
+: A short list ofinequality data resources besides the WID
+:::
+:::
+
+::: my-resource-container
 -   **OWID**: [Our World In Data](https://ourworldindata.org/) (OWID) is
     an online publication that focuses on large global problems such as
     poverty, disease, hunger, climate change, war, existential risks,
@@ -121,35 +147,13 @@ other important data resources on inequality as well:
 
 To understand use all these data resources is a complex enterprise. As a
 first step and starting point I will concentrate on the World Inequality
-Database because there exist several monographs where these data are
+Database (WID) because there exist several monographs where these data are
 used and interpreted. But most of the time these books refer to global,
 regional or 'important' countries like China, France, German, India,
-United Kingdom, United States etc.
+United Kingdom, United States etc. My challenge is trying to replicate the main results with the example of Austria. Unfortunately the dataset for Austria is not very comprehensive. It could be the case that I should try to develop my own dataset for Austria using specific data sources like [Statistic Austria](https://www.statistik.at/en/) or the European Survey on Income and Living Conditions (`r glossary("EU-SILC")`).
 
-The `r glossary("WIL")` is working on several important research projects, most of them have not only publication but also free and open accessible data sets. All of these projects can function as `r glossary("advanced organizer", "advanced organizers")` for me. I have to inspect their data sets and figure out what would be an effective learning approach.
 
-::: my-resource
-::: my-resource-header
-::: {#lem-inequality-projects}
-: `r glossary("WIL")` research projects
-:::
-:::
 
-::: my-resource-container
--   **WIPD**: The [World Political Cleavages and Inequality
-    Database](https://wpid.world/) (WPID) is the result of a collaborative research program involving about twenty researchers all around the world. The central aim is to provide open and convenient access to the most extensive available dataset on the structure of political cleavages and social inequalities in electoral democracies, located on the five continents, from the mid-20th century to the present. [@gethin2024].
--   Une histoire du conflit politique: Elections and social inequalities in France, 1789-2022 [@cage2023].
--   [Climate Inequality Report 2023](https://wid.world/news-article/climate-inequality-report-2023-fair-taxes-for-a-sustainable-future-in-the-global-south/): The aim of this report is twofold. It endeavours first to shed light on these various dimensions of climate inequality in a systematic and detailed analysis, focusing on low- and middle-income countries in particular. It then builds on these insights, together with additional empirical work and interviews with experts, to suggest pathways to development cooperation, and tax and social policies that tackle climate inequalities at their core. (This project has at the moment not public data available.)
--   **WIR2022**: [The World Inequality Report
-    2022](https://wir2022.wid.world/methodology/) (WIR2022) 
-:::
-:::
-
-I will try to follow the arguments of two books that I will use as
-`r glossary("advanced organizer", "advanced organizers")` to illustrate
-their discussion with data from Austria: These books are "A Brief
-History of Equality" (BHE) [@piketty2022] and the "World Inequality
-Report 2022" (WIR2022) [@chancel2022].
 
 
 
