--- a/01-data-resources.qmd
+++ b/01-data-resources.qmd
@@ -1,4 +1,4 @@
-# Where do the data come from? {#sec-01-data-resources}
+# Data Resources {#sec-01-data-resources}
 
 
 ```{r}
@@ -30,13 +30,12 @@ This short chapter will list possible data resources. At the moment of this writ
 ::::
 :::::
 
-## Data resources 
 
-### World Inequality Lab (WIL)
+## World Inequality Lab (WIL)
 
 The WIL consists of a [team of about 40 people](https://inequalitylab.world/en/team/), based primarily at the Paris School of Economics and the University of Berkeley, California. It is supported by more than 200 researchers of diverse nationalities and institutions, forming the so-called [WID Fellows](https://inequalitylab.world/en/%20wid-fellows/). (See the [complete team](https://wid.world/team/) working on the WID.)
 
-#### World Inequality Database (WID)
+### World Inequality Database (WID)
 
 Generally I will prefer data already collected and cleaned by some trustful organizations or researchers. And from these I will preferable (or at least start) with data free accessible at the `r glossary("WID")`. These data are compiled by the `r glossary("WIL")` and presented as open-access datasets accompanied by publications, graphics, tables slides and an interactive website at https://wid.world.
 
@@ -71,8 +70,8 @@ Generally I will prefer data already collected and cleaned by some trustful orga
 ::::
 :::::
 
-::: {.callout-caution style="color: darkgoldenrod;"}
-###### Some tools are not maintained anymore
+::: {.callout-caution}
+####### Some tools are not maintained anymore
 
 [Thomas Blanchet](https://github.com/thomasblanchet) has developed with [gpinter](https://github.com/thomasblanchet/gpinter) (an R package for generalized Pareto interpolation), [wid-R-tool](https://github.com/thomasblanchet/wid-r-tool) (an R package to download data from the WID.world), and [wid-stata-tool](https://github.com/thomasblanchet/wid-stata-tool) (Stata commands to download data from the WID.world database) several tools for working with the WID. But he is not affiliated anymore with the WID and has recently (2024-08-24) withdrawn all support for these tools. 
 
@@ -93,11 +92,11 @@ The `r glossary("WID")` is the flagship project of the `r glossary("WIL")` and i
 :::
 
 ::: my-resource-container
--   **WIPD**: The [World Political Cleavages and Inequality
+-   [The World Political Cleavages and Inequality
     Database](https://wpid.world/) (WPID) is the result of a collaborative research program involving about twenty researchers all around the world. The central aim is to provide open and convenient access to the most extensive available dataset on the structure of political cleavages and social inequalities in electoral democracies, located on the five continents, from the mid-20th century to the present. [@gethin2024].
--   **WIR2022**: [The World Inequality Report
+- [The World Inequality Report
     2022](https://wir2022.wid.world/methodology/) (WIR2022) is the benchmark account of recent and historical trends in inequality. The report builds on the pioneering [edition of 2018](https://wir2018.wid.world/) to provide policy makers and scholars everywhere up-to-date information about the history of inequality, gender inequality, environmental inequalities, and trends in international tax reform and redistribution.
--   **Une histoire du conflit politique**: [The book](https://www.unehistoireduconflitpolitique.fr/) is about elections and social inequalities in France, 1789-2022 [@cage2023] and is written in French. Who votes for whom and why? How did the social structure of the electorates of the different political movements and currents evolve in France from 1789 to 2022? You have access to all the electoral and socio-economic data that were collected at the level of the 36,000 municipalities of France, from the digitized electoral minutes to the National Archives to the finalized and homogenized files on which the research was based.
+- [Une histoire du conflit politique](https://www.unehistoireduconflitpolitique.fr/) is about elections and social inequalities in France, 1789-2022 [@cage2023] and is written in French. Who votes for whom and why? How did the social structure of the electorates of the different political movements and currents evolve in France from 1789 to 2022? You have access to all the electoral and socio-economic data that were collected at the level of the 36,000 municipalities of France, from the digitized electoral minutes to the National Archives to the finalized and homogenized files on which the research was based.
 - [Inequality in Latin America](https://distribuciones.info/index.html). The article is written in Spanish and it is based on [More Unequal or Not as Rich? Revisiting the Latin American Exception](https://wid.world/document/more-unequal-or-not-as-rich-revisiting-the-latin-american-exception-world-inequality-lab-working-paper-2022-13/). The article examines income distribution in Latin America and challenges the commonly accepted belief that the region is an exception to global trends of growing inequality. To support his research the team built new datasets which covers 80% of the region's population and combines surveys harmonized, social security data, tax returns on national income and accounts during the period 2000-2020. 
 - [Global Taxation of Capital and Labor](https://globaltaxation.world/) studies how the globalization has affected the taxation of labor and capital incomes. To address this questions the authors built and analyzed a new, global database on effective macroeconomic tax rates in more than 150 countries since 1965, combining national accounts data with government revenue statistics, including from a wide variety of archival records.
 - [Realtime Inequality](https://realtimeinequality.org/) provides the first timely statistics on how economic growth is distributed across groups. When new growth numbers come out each quarter, we show how each income and wealth group benefits to conclude who benefits from income and wealth Growth in the United States.
@@ -152,8 +151,6 @@ Database (WID) because there exist several monographs where these data are
 used and interpreted. But most of the time these books refer to global,
 regional or 'important' countries like China, France, German, India,
 United Kingdom, United States etc. My challenge is trying to replicate the main results with the example of Austria. Unfortunately the dataset for Austria is not very comprehensive. It could be the case that I should try to develop my own dataset for Austria using specific data sources like [Statistic Austria](https://www.statistik.at/en/) or the European Survey on Income and Living Conditions (`r glossary("EU-SILC")`).
-
-
 
 
 
