--- a/references.bib
+++ b/references.bib
@@ -78,18 +78,6 @@
 	langid = {English}
 }
 
-@book{chancel2022,
-	title = {World Inequality Report 2022},
-	author = {Chancel, Lucas and Piketty, Thomas and Saez, Emmanuel and Zucman, Gabriel and Duflo, Esther},
-	year = {2022},
-	month = {11},
-	date = {2022-11-01},
-	publisher = {Harvard University Press},
-	note = {Citation Key: chancel2022},
-	address = {Cambridge, Massachusetts London, England},
-	langid = {English}
-}
-
 @book{gethin2021,
 	title = {Political Cleavages and Social Inequalities - A Study of Fifty Democracies, 1948-2020: A Study of Fifty Democracies, 1948{\textendash}2020},
 	author = {Gethin, Amory and {Martínez-Toleda}, Clara and Piketty, Thomas},
@@ -177,7 +165,7 @@
 	langid = {canadian}
 }
 
-@book{chancel2022,
+@book{chancel2022a,
 	title = {World Inequality Report 2022, World Inequality Lab},
 	author = {Chancel, Lucas and Piketty, Thomas and Saez, Emmanuel and Zucman, Gabriel and Duflo, Esther},
 	year = {2022},
@@ -185,7 +173,7 @@
 	date = {2022-11-01},
 	publisher = {Harvard University Press},
 	url = {https://wir2022.wid.world/},
-	note = {Citation Key: chancel2022},
+	note = {Citation Key: chancel2022a},
 	address = {Cambridge, Massachusetts London, England},
 	langid = {English}
 }
@@ -330,3 +318,28 @@
 	address = {New York, NY},
 	langid = {Englisch}
 }
+
+@book{lustig2022,
+	title = {Commitment to equity handbook. Volume 1: Fiscal Incidence Analysis: Methodology, Implementation, and Applications},
+	editor = {Lustig, Nora and CEQ Institute,  and Brookings Institution, },
+	year = {2022},
+	date = {2022},
+	publisher = {Brookings Institution},
+	edition = {Second edition},
+	note = {Citation Key: lustig{\_}2022},
+	address = {Washington, DC},
+	langid = {en}
+}
+
+@book{lustig2022a,
+	title = {Commitment to equity handbook. Volume 2: Methodological frontiers in fiscal incidence analysis},
+	editor = {Lustig, Nora and CEQ Institute,  and Brookings Institution, },
+	year = {2022},
+	date = {2022},
+	publisher = {Brookings Institution},
+	edition = {Second edition},
+	note = {Citation Key: lustig{\_}2022a},
+	address = {Washington, DC},
+	langid = {en}
+}
+
