--- a/references.bib
+++ b/references.bib
@@ -343,3 +343,19 @@
 	langid = {en}
 }
 
+
+@article{jenkins2015,
+	title = {World income inequality databases: an assessment of WIID and SWIID},
+	author = {Jenkins, Stephen P.},
+	year = {2015},
+	month = {12},
+	date = {2015-12-01},
+	journal = {The Journal of Economic Inequality},
+	pages = {629--671},
+	volume = {13},
+	number = {4},
+	doi = {10.1007/s10888-015-9305-3},
+	url = {https://doi.org/10.1007/s10888-015-9305-3},
+	note = {Citation Key: jenkins{\_}2015},
+	langid = {en}
+}
