--- a/references.bib
+++ b/references.bib
@@ -359,3 +359,38 @@
 	note = {Citation Key: jenkins{\_}2015},
 	langid = {en}
 }
+
+@techreport{helliwell2024a,
+	title = {WHR 2024: Statistical Appendix for Chapter 2},
+	author = {Helliwell, John F. and Layard, Richard and Sachs, Jeffrey D. and De-Neve, Jan-Emmanuel and Aknin, Jara B and Wang, Shun},
+	year = {2024},
+	month = {03},
+	date = {2024-03-12},
+	url = {https://worldhappiness.report/},
+	note = {Citation Key: helliwell{\_}2024a}
+}
+
+
+@misc{whr-download-analysis,
+	title = {World Happiness Report: List of Reports for Download / Analysis},
+	url = {https://worldhappiness.report/analysis/},
+	note = {Citation Key: whr-download-analysis},
+	langid = {en}
+}
+
+@article{nilsson2024,
+	title = {The Cantril Ladder elicits thoughts about power and wealth},
+	author = {Nilsson, {August Håkan} and Eichstaedt, Johannes C. and Lomas, Tim and Schwartz, Andrew and Kjell, Oscar},
+	year = {2024},
+	month = {02},
+	date = {2024-02-01},
+	journal = {Scientific Reports},
+	pages = {2642},
+	volume = {14},
+	number = {1},
+	doi = {10.1038/s41598-024-52939-y},
+	url = {https://www.nature.com/articles/s41598-024-52939-y},
+	note = {Publisher: Nature Publishing Group
+Citation Key: nilsson{\_}2024},
+	langid = {en}
+}
